Adding insert, update

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@
 *.tar.gz
 *.rar
 
+.gradle/
+.idea/
+
 Environment/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
